--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="hint_size">18sp</dimen>
+    <dimen name="size_18">18sp</dimen>
+    <dimen name="size_15">15sp</dimen>
+    <dimen name="size_14">14sp</dimen>
+
 </resources>
