--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,23 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!--    Style for title -->
     <style name="AppTitleTextStyle" parent="@style/TextAppearance.AppCompat">
-        <item name="android:textSize">@dimen/hint_size</item>
-        <item name="android:textColor">#846340</item>
+        <item name="android:textSize">@dimen/size_18</item>
+        <item name="android:textColor">@color/title_color</item>
         <item name="android:fontFamily">@font/sf_ui_display_bold</item>
     </style>
 
     <!--    Style for info text -->
     <style name="AppRegisterViewTextMain" parent="@style/TextAppearance.AppCompat">
-        <item name="android:textSize">15dp</item>
-        <item name="android:textColor">#846340</item>
+        <item name="android:textSize">@dimen/size_15</item>
+        <item name="android:textColor">@color/title_color</item>
         <item name="android:fontFamily">@font/sf_ui_display_regular</item>
     </style>
 
     <!--    Style for typed text-->
     <style name="AppRegisterViewTextHint" parent="@style/TextAppearance.AppCompat">
-        <item name="android:textSize">18dp</item>
-        <item name="android:textColor">#AF9479</item>
+        <item name="android:textSize">@dimen/size_18</item>
+        <item name="android:textColor">@color/small_text_color</item>
+        <item name="android:fontFamily">@font/sf_ui_display_regular</item>
+    </style>
+
+    <style name="Btn" parent="@style/Widget.Material3.Button">
+        <item name="android:radius">24.5dp</item>
+        <item name="borderRound">1dp</item>
+        <item name="android:textSize">@dimen/size_18</item>
+        <item name="android:fontFamily">@font/sf_ui_display_bold</item>
+        <item name="android:textColor">@color/btn_text</item>
+    </style>
+
+    <style name="AppCellSmallText" parent="@style/TextAppearance.AppCompat">
+        <item name="android:textSize">@dimen/size_14</item>
+        <item name="android:textColor">@color/small_text_color</item>
         <item name="android:fontFamily">@font/sf_ui_display_regular</item>
     </style>
 
