--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Shop" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Shop" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/actionbar_background</item>
+<!--        <item name="colorPrimary">@color/actionbar_background</item>-->
+        <item name="colorPrimary">@color/btn_color</item>
         <item name="colorPrimaryVariant">@color/actionbar_background</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
