--- a/app/src/main/res/layout/cell.xml
+++ b/app/src/main/res/layout/cell.xml
@@ -1,32 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/cell">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/cafe_name"
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="BEDOEV CAFE"
-        style="@style/AppTitleTextStyle"
+        android:background="@drawable/custom_table"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="6dp"
+        android:elevation="2dp"
+        >
+        <TableRow>
+            <TextView
+                android:id="@+id/cafe_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
 
+                style="@style/AppTitleTextStyle"
+                android:layout_marginTop="14dp"
+                android:layout_marginLeft="10dp"
+                />
+        </TableRow>
 
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="15dp"
-        />
+        <TableRow>
+            <TextView
+                android:id="@+id/distance_to_cafe"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
 
-    <TextView
-        android:id="@+id/distance_to_cafe"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="1 км от вас"
-        style="@style/AppCellSmallText"
+                style="@style/AppCellSmallText"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="9dp"
+                android:layout_marginLeft="10dp"
 
-        app:layout_constraintTop_toBottomOf="@id/cafe_name"
-        android:layout_marginTop="6dp"
-        tools:ignore="MissingConstraints" />
+                />
+        </TableRow>
+    </TableLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
